devops/k8s/istio/demo-app/session-3/after/author.yaml
apiVersion: v1
kind: Service
metadata:
  name: authors
  labels:
    app: authors
    service: authors
    project: istio-course
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      name: http
  selector:
    app: authors
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-v2
  labels:
    app: authors
    version: v2
    project: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors
      version: v2
      project: istio-course
  template:
    metadata:
      labels:
        app: authors
        version: v2
        project: istio-course
    spec:
      serviceAccountName: servicemesh-authors
      containers:
        - name: authors
          image: butuzov/demoapp-authors:v2
          imagePullPolicy: IfNotPresent #Or use Always to download it from dockerhub
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: "/healthcheck/liveness"
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/healthcheck/readiness"
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "50M"
              cpu: "0.25"
            limits:
              memory: "100M"
              cpu: "0.45"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-v2-1
  labels:
    app: authors
    version: v2.1
    project: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors
      version: v2.1
      project: istio-course
  template:
    metadata:
      labels:
        app: authors
        version: v2.1
        project: istio-course
    spec:
      serviceAccountName: servicemesh-authors
      containers:
        - name: authors
          image: butuzov/demoapp-authors:v2.1
          imagePullPolicy: IfNotPresent #Or use Always to download it from dockerhub
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: "/healthcheck/liveness"
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/healthcheck/readiness"
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "50M"
              cpu: "0.25"
            limits:
              memory: "100M"
              cpu: "0.45"
